# group88_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: .gitignore  config
.github/workflows/: cml_data.yaml  linting.yaml  tests.yaml
configs/: config.yaml
configs/experiment/: exp1.yaml  exp2.yaml  exp3.yaml  exp4.yaml
configs/model/: densenet121.yaml  efficientnet-b0.yaml
configs/optimizer/: adam_base.yaml  adam_light.yaml  adam_phase1.yaml  adam_phase2.yaml  adam_strong.yaml
configs/training/: bs16.yaml  bs32.yaml  experiment_1.yaml  long.yaml
data/: .gitignore  processed.dvc  raw.dvc
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
logs/: events.out.tfevents.1768245211.MacBook-Pro-de-Rita.local.26889.0  events.out.tfevents.1768245223.MacBook-Pro-de-Rita.local.27046.0  events.out.tfevents.1768245392.MacBook-Pro-de-Rita.local.27265.0  events.out.tfevents.1768245625.MacBook-Pro-de-Rita.local.27492.0  events.out.tfevents.1768245648.MacBook-Pro-de-Rita.local.27642.0  events.out.tfevents.1768246663.MacBook-Pro-de-Rita.local.28454.0  events.out.tfevents.1768247244.MacBook-Pro-de-Rita.local.28737.0  events.out.tfevents.1768247331.MacBook-Pro-de-Rita.local.28911.0  events.out.tfevents.1768247448.MacBook-Pro-de-Rita.local.29122.0
reports/: README.md
src/xray_image_classifier/: data.py  evaluate.py  model.py  train.py  train_hydra.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
wandb/: latest-run
(+102 files in other folders)
